--- a/html/Copernicium/FileObj.html
+++ b/html/Copernicium/FileObj.html
@@ -243,9 +243,7 @@
           
           <div class="method-source-code" id="last-source">
             <pre><span class="ruby-comment"># File lib/workspace.rb, line 21</span>
-<span class="ruby-keyword">def</span> <span class="ruby-identifier">last</span>
-  <span class="ruby-ivar">@history</span>.<span class="ruby-identifier">last</span>
-<span class="ruby-keyword">end</span></pre>
+<span class="ruby-keyword">def</span> <span class="ruby-identifier">last</span>() <span class="ruby-ivar">@history</span>.<span class="ruby-identifier">last</span> <span class="ruby-keyword">end</span></pre>
           </div>
           
         </div>
