--- a/html/Copernicium/UIComm.html
+++ b/html/Copernicium/UIComm.html
@@ -112,7 +112,7 @@ repository</p>
       <div id="attribute-i-cmt_msg" class="method-detail">
         <div class="method-heading attribute-method-heading">
           <span class="method-name">cmt_msg</span><span
-            class="attribute-access-type">[R]</span>
+            class="attribute-access-type">[RW]</span>
         </div>
 
         <div class="method-description">
@@ -125,7 +125,7 @@ repository</p>
       <div id="attribute-i-command" class="method-detail">
         <div class="method-heading attribute-method-heading">
           <span class="method-name">command</span><span
-            class="attribute-access-type">[R]</span>
+            class="attribute-access-type">[RW]</span>
         </div>
 
         <div class="method-description">
@@ -138,7 +138,7 @@ repository</p>
       <div id="attribute-i-files" class="method-detail">
         <div class="method-heading attribute-method-heading">
           <span class="method-name">files</span><span
-            class="attribute-access-type">[R]</span>
+            class="attribute-access-type">[RW]</span>
         </div>
 
         <div class="method-description">
@@ -151,7 +151,7 @@ repository</p>
       <div id="attribute-i-opts" class="method-detail">
         <div class="method-heading attribute-method-heading">
           <span class="method-name">opts</span><span
-            class="attribute-access-type">[R]</span>
+            class="attribute-access-type">[RW]</span>
         </div>
 
         <div class="method-description">
@@ -164,7 +164,7 @@ repository</p>
       <div id="attribute-i-repo" class="method-detail">
         <div class="method-heading attribute-method-heading">
           <span class="method-name">repo</span><span
-            class="attribute-access-type">[R]</span>
+            class="attribute-access-type">[RW]</span>
         </div>
 
         <div class="method-description">
@@ -177,7 +177,7 @@ repository</p>
       <div id="attribute-i-rev" class="method-detail">
         <div class="method-heading attribute-method-heading">
           <span class="method-name">rev</span><span
-            class="attribute-access-type">[R]</span>
+            class="attribute-access-type">[RW]</span>
         </div>
 
         <div class="method-description">
@@ -216,7 +216,7 @@ repository</p>
 
           
           <div class="method-source-code" id="new-source">
-            <pre><span class="ruby-comment"># File lib/ui.rb, line 13</span>
+            <pre><span class="ruby-comment"># File lib/ui.rb, line 15</span>
 <span class="ruby-keyword">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">command</span><span class="ruby-operator">:</span> <span class="ruby-keyword">nil</span>, <span class="ruby-identifier">files</span><span class="ruby-operator">:</span> <span class="ruby-keyword">nil</span>, <span class="ruby-identifier">rev</span><span class="ruby-operator">:</span> <span class="ruby-keyword">nil</span>,
                <span class="ruby-identifier">cmt_msg</span><span class="ruby-operator">:</span> <span class="ruby-keyword">nil</span>, <span class="ruby-identifier">repo</span><span class="ruby-operator">:</span> <span class="ruby-keyword">nil</span>, <span class="ruby-identifier">opts</span><span class="ruby-operator">:</span> <span class="ruby-keyword">nil</span>)
   <span class="ruby-ivar">@cmt_msg</span> = <span class="ruby-identifier">cmt_msg</span>
