--- a/html/Copernicium.html
+++ b/html/Copernicium.html
@@ -148,7 +148,7 @@ out - exit status code</pre>
 <p>note: @@history is a hash array of snapshot ids, which is saved as
 .cn/history to persist between calls to the copernicium tool</p>
 
-<p>workspace module - linfeng and qiguang</p>
+<p>workspace module linfeng song, qiguang liu</p>
 
   </section>
 
