--- a/html/README_md.html
+++ b/html/README_md.html
@@ -65,6 +65,7 @@
     <li><a href="#label-ssh+keys">ssh keys</a>
     <li><a href="#label-development">development</a>
     <li><a href="#label-relevant+links-3A">relevant links:</a>
+    <li><a href="#label-todos">todos</a>
   </ul>
 </div>
 
@@ -210,6 +211,13 @@ history</a></p>
 <p><a href="https://www.messenger.com/t/563048860513155">messenger chat</a></p>
 </li><li>
 <p><a href="https://app.asana.com/0/56905660582491/calendar">asana tasks</a></p>
+</li></ul>
+
+<h3 id="label-todos">todos<span><a href="#label-todos">&para;</a> <a href="#top">&uarr;</a></span></h3>
+<ul><li>
+<p>checkout commits by semantic id</p>
+</li><li>
+<p>refactor ui logic code into modules</p>
 </li></ul>
 </main>
 
