--- a/html/index.html
+++ b/html/index.html
@@ -224,6 +224,13 @@ history</a></p>
 </li><li>
 <p><a href="https://app.asana.com/0/56905660582491/calendar">asana tasks</a></p>
 </li></ul>
+
+<h3 id="label-todos">todos<span><a href="#label-todos">&para;</a> <a href="#top">&uarr;</a></span></h3>
+<ul><li>
+<p>checkout commits by semantic id</p>
+</li><li>
+<p>refactor ui logic code into modules</p>
+</li></ul>
 </main>
 
 
