--- a/html/table_of_contents.html
+++ b/html/table_of_contents.html
@@ -38,6 +38,7 @@
       <li><a href="README_md.html#label-ssh+keys">ssh keys</a>
       <li><a href="README_md.html#label-development">development</a>
       <li><a href="README_md.html#label-relevant+links-3A">relevant links:</a>
+      <li><a href="README_md.html#label-todos">todos</a>
     </ul>
   </li>
   
@@ -209,14 +210,14 @@
     <span class="container">Copernicium::Repos</span>
 
   <li class="method">
-    <a href="Copernicium/Repos.html#method-c-history">::history</a>
-    &mdash;
-    <span class="container">Copernicium::Repos</span>
-
-  <li class="method">
     <a href="Copernicium/RevLog.html#method-c-history">::history</a>
     &mdash;
     <span class="container">Copernicium::RevLog</span>
+
+  <li class="method">
+    <a href="Copernicium/Repos.html#method-c-history">::history</a>
+    &mdash;
+    <span class="container">Copernicium::Repos</span>
 
   <li class="method">
     <a href="Copernicium/Workspace.html#method-c-indexOf">::indexOf</a>
@@ -234,14 +235,19 @@
     <span class="container">Copernicium::Repos</span>
 
   <li class="method">
+    <a href="Copernicium/RevLog.html#method-c-merge">::merge</a>
+    &mdash;
+    <span class="container">Copernicium::RevLog</span>
+
+  <li class="method">
     <a href="Copernicium/Workspace.html#method-c-merge">::merge</a>
     &mdash;
     <span class="container">Copernicium::Workspace</span>
 
   <li class="method">
-    <a href="Copernicium/RevLog.html#method-c-merge">::merge</a>
+    <a href="Copernicium/Repos.html#method-c-merge_history">::merge_history</a>
     &mdash;
-    <span class="container">Copernicium::RevLog</span>
+    <span class="container">Copernicium::Repos</span>
 
   <li class="method">
     <a href="Copernicium/Repos.html#method-c-merge_snapshot">::merge_snapshot</a>
@@ -254,14 +260,14 @@
     <span class="container">Copernicium::Snapshot</span>
 
   <li class="method">
-    <a href="Copernicium/UIComm.html#method-c-new">::new</a>
-    &mdash;
-    <span class="container">Copernicium::UIComm</span>
-
-  <li class="method">
     <a href="Copernicium/FileObj.html#method-c-new">::new</a>
     &mdash;
     <span class="container">Copernicium::FileObj</span>
+
+  <li class="method">
+    <a href="Copernicium/UIComm.html#method-c-new">::new</a>
+    &mdash;
+    <span class="container">Copernicium::UIComm</span>
 
   <li class="method">
     <a href="Copernicium/PushPull.html#method-c-pclone">::pclone</a>
@@ -279,6 +285,11 @@
     <span class="container">Copernicium::PushPull</span>
 
   <li class="method">
+    <a href="Copernicium/RevLog.html#method-c-setup">::setup</a>
+    &mdash;
+    <span class="container">Copernicium::RevLog</span>
+
+  <li class="method">
     <a href="Copernicium/Workspace.html#method-c-setup">::setup</a>
     &mdash;
     <span class="container">Copernicium::Workspace</span>
@@ -289,9 +300,9 @@
     <span class="container">Copernicium::Repos</span>
 
   <li class="method">
-    <a href="Copernicium/RevLog.html#method-c-setup">::setup</a>
+    <a href="Copernicium/Repos.html#method-c-setup_tester">::setup_tester</a>
     &mdash;
-    <span class="container">Copernicium::RevLog</span>
+    <span class="container">Copernicium::Repos</span>
 
   <li class="method">
     <a href="Copernicium/RevLog.html#method-c-setup_tester">::setup_tester</a>
@@ -299,7 +310,7 @@
     <span class="container">Copernicium::RevLog</span>
 
   <li class="method">
-    <a href="Copernicium/Repos.html#method-c-setup_tester">::setup_tester</a>
+    <a href="Copernicium/Repos.html#method-c-sort_history">::sort_history</a>
     &mdash;
     <span class="container">Copernicium::Repos</span>
 
