--- a/html/Copernicium/PushPull.html
+++ b/html/Copernicium/PushPull.html
@@ -143,7 +143,7 @@
     <span class="ruby-identifier">@@host</span> = <span class="ruby-identifier">remote</span>[<span class="ruby-value">0</span>]
     <span class="ruby-identifier">@@path</span> = <span class="ruby-identifier">remote</span>[<span class="ruby-value">1</span>]
   <span class="ruby-keyword">elsif</span> <span class="ruby-identifier">remote</span>.<span class="ruby-identifier">length</span> <span class="ruby-operator">==</span> <span class="ruby-value">1</span>
-    <span class="ruby-identifier">@@host</span> = <span class="ruby-string">&quot;cycle3.csug.rochester.edu&quot;</span>
+    <span class="ruby-identifier">@@host</span> = <span class="ruby-string">&quot;cycle1.csug.rochester.edu&quot;</span>
     <span class="ruby-identifier">@@path</span> = <span class="ruby-identifier">remote</span>.<span class="ruby-identifier">first</span>
   <span class="ruby-keyword">else</span>
     <span class="ruby-identifier">raise</span> <span class="ruby-string">&#39;Remote host information not given.&#39;</span>.<span class="ruby-identifier">red</span>
@@ -378,22 +378,23 @@ copy without one</pre>
 
           
           <div class="method-source-code" id="ppull-source">
-            <pre><span class="ruby-comment"># File lib/pushpull.rb, line 162</span>
+            <pre><span class="ruby-comment"># File lib/pushpull.rb, line 164</span>
 <span class="ruby-keyword">def</span> <span class="ruby-constant">PushPull</span>.<span class="ruby-identifier">ppull</span>
   <span class="ruby-keyword">begin</span>
     <span class="ruby-constant">PushPull</span>.<span class="ruby-identifier">fetch</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">session</span><span class="ruby-operator">|</span>
       <span class="ruby-comment"># uploading our history to remote</span>
-      <span class="ruby-identifier">session</span>.<span class="ruby-identifier">download!</span>(<span class="ruby-node">&quot;#{@@path}/.cn/merging_#{@@user}&quot;</span>,
-                        <span class="ruby-node">&quot;#{Dir.pwd}/.cn/history&quot;</span>)
+      <span class="ruby-identifier">session</span>.<span class="ruby-identifier">download!</span>( <span class="ruby-node">&quot;#{@@path}/.cn/history&quot;</span>,
+                        <span class="ruby-node">&quot;#{Dir.pwd}/.cn/merging_#{@@user}&quot;</span>)
 
       <span class="ruby-comment"># uploading our .cn info to remote</span>
       <span class="ruby-node">%w{revs snap}</span>.<span class="ruby-identifier">each</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">file</span><span class="ruby-operator">|</span>
         <span class="ruby-identifier">session</span>.<span class="ruby-identifier">download!</span>(<span class="ruby-node">&quot;#{@@path}/.cn/#{file}&quot;</span>,
                           <span class="ruby-node">&quot;#{Dir.pwd}/.cn/&quot;</span>,
-                          <span class="ruby-value">:recursive</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-keyword">true</span>)
+                            <span class="ruby-value">:recursive</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-keyword">true</span>)
       <span class="ruby-keyword">end</span>
     <span class="ruby-keyword">end</span>
     <span class="ruby-identifier">system</span> <span class="ruby-string">&quot;cn update&quot;</span>, <span class="ruby-identifier">@@user</span>
+    <span class="ruby-identifier">system</span> <span class="ruby-string">&quot;cn checkout head&quot;</span>
     <span class="ruby-identifier">puts</span> <span class="ruby-string">&quot;Remote pulled: &quot;</span>.<span class="ruby-identifier">grn</span> <span class="ruby-operator">+</span> <span class="ruby-identifier">@@host</span> <span class="ruby-operator">+</span> <span class="ruby-identifier">@@path</span>
   <span class="ruby-keyword">rescue</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-identifier">error</span>
     <span class="ruby-identifier">connection_failure</span> <span class="ruby-string">&quot;trying to pull files&quot;</span>, <span class="ruby-identifier">error</span>
@@ -434,7 +435,7 @@ copy without one</pre>
 
           
           <div class="method-source-code" id="ppush-source">
-            <pre><span class="ruby-comment"># File lib/pushpull.rb, line 132</span>
+            <pre><span class="ruby-comment"># File lib/pushpull.rb, line 133</span>
 <span class="ruby-keyword">def</span> <span class="ruby-constant">PushPull</span>.<span class="ruby-identifier">ppush</span>
   <span class="ruby-keyword">begin</span>
     <span class="ruby-constant">PushPull</span>.<span class="ruby-identifier">transfer</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">ssh</span><span class="ruby-operator">|</span>
@@ -452,6 +453,7 @@ copy without one</pre>
 
     <span class="ruby-constant">PushPull</span>.<span class="ruby-identifier">connect</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">ssh</span><span class="ruby-operator">|</span>
       <span class="ruby-identifier">puts</span> <span class="ruby-identifier">ssh</span>.<span class="ruby-identifier">exec!</span> <span class="ruby-node">&quot;cd #{@@path} &amp;&amp; cn update #{@@user}&quot;</span>
+      <span class="ruby-identifier">puts</span> <span class="ruby-identifier">ssh</span>.<span class="ruby-identifier">exec!</span> <span class="ruby-node">&quot;cd #{@@path} &amp;&amp; cn checkout head&quot;</span>
     <span class="ruby-keyword">end</span>
   <span class="ruby-keyword">rescue</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-identifier">error</span>
     <span class="ruby-identifier">connection_failure</span> <span class="ruby-string">&quot;trying to push files&quot;</span>, <span class="ruby-identifier">error</span>
